--- a/setup.yaml
+++ b/setup.yaml
@@ -229,6 +229,7 @@
           - python3-pip
           - docker-compose
           - podman
+          - vim
 
     - name: Install snaps
       become: yes
