added Evolution for O365

--- a/setup.yaml
+++ b/setup.yaml
@@ -256,6 +256,8 @@
           - yubikey-manager
           - agordejo
           - cifs-utils
+          - evolution
+          - evolution-ews
 
     - name: Install snaps
       become: yes
