--- a/setup.yaml
+++ b/setup.yaml
@@ -42,8 +42,12 @@
         franz_version: 5.6.1
     - role: ansible-role-keybase
       become: yes
-#    - role: fubarhouse.golang
-#      become: yes
+    - role: fubarhouse.golang
+      become: yes
+    - role: m4rcu5nl.zerotier-one
+      become: yes
+    - role: oefenweb.dropbox
+      become: yes
 
   tasks:
 ### Set inotify watches for JetBrains
@@ -260,6 +264,8 @@
           - evolution-ews
           - handbrake
           - handbrake-cli
+          - libqt5webkit5
+          - openssh-server
 
     - name: Install snaps
       become: yes
@@ -275,6 +281,7 @@
           - zoom-client
           - discord
           - yubioath-desktop
+          - kustomize
 
     - name: Install snaps (edge)
       become: yes
