--- a/setup.yaml
+++ b/setup.yaml
@@ -295,9 +295,16 @@
       community.general.snap:
         classic: yes
         name:
-          - go
           - skype
           - slack
+
+    - name: install Go (1.16)
+      become: yes
+      community.general.snap:
+        classic: yes
+        channel: 1.16/stable
+        name:
+          - go
 
     - name: install python packages
       become: yes
