--- a/setup.yaml
+++ b/setup.yaml
@@ -154,7 +154,6 @@
         - https://download.docker.com/linux/ubuntu/gpg
         - https://baltocdn.com/helm/signing.asc
         - https://packages.cloud.google.com/apt/doc/apt-key.gpg
-        - "https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_{{ ansible_env.VERSION_ID }}/Release.key"
         - https://packages.riot.im/debian/riot-im-archive-keyring.gpg
 
     - name: Add apt repositories into sources list
@@ -167,9 +166,9 @@
         - deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
         - deb https://baltocdn.com/helm/stable/debian/ all main
         - deb https://apt.kubernetes.io/ kubernetes-xenial main
-        - "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_{{ ansible_env.VERSION_ID }}/ /"
         - ppa:lutris-team/lutris
-        - ppa:git-core/ppa
+#        - ppa:git-core/ppa ## This is broken for hirsute
+        - deb http://ppa.launchpad.net/yubico/stable/ubuntu focal main
         - ppa:yubico/stable
         - deb [arch=amd64] https://packages.riot.im/debian/ default main
 
@@ -243,7 +242,6 @@
           - bat
           - python3-pip
           - docker-compose
-          - podman
           - vim
           - nodejs
           - fonts-firacode
