--- a/setup.yaml
+++ b/setup.yaml
@@ -275,6 +275,7 @@
           - network-manager-openvpn
           - network-manager-openvpn-gnome
           - openvpn
+          - winbind
 
     - name: Install snaps
       become: yes
