added python-dev and boost dev to build mididings

--- a/setup.yaml
+++ b/setup.yaml
@@ -276,6 +276,8 @@
           - network-manager-openvpn-gnome
           - openvpn
           - winbind
+          - python-dev
+          - libboost-all-dev
 
     - name: Install snaps
       become: yes
