--- a/setup.yaml
+++ b/setup.yaml
@@ -171,9 +171,9 @@
         - ppa:git-core/ppa ## This is broken for hirsute
         - ppa:yubico/stable
 #        - deb [arch=amd64] https://packages.riot.im/debian/ default main
-#        - "deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ focal main"
-        - "deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ {{ ansible_distribution_release }} main"
-        - deb https://dl.winehq.org/wine-builds/ubuntu/ focal main
+        - "deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ focal main"
+#        - "deb https://packagecloud.io/golang-migrate/migrate/ubuntu/ {{ ansible_distribution_release }} main"
+        - deb https://dl.winehq.org/wine-builds/ubuntu/ {{ ansible_distribution_release }} main
 
     - name: Add NodeSource stuff
 #      warn: false # why doesn't this work?
